--- a/presentation/src/main/res/layout/fragment_repo_list.xml
+++ b/presentation/src/main/res/layout/fragment_repo_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <com.dreddi.android.githublist.presentation.views.RepoListRecyclerView
-        android:id="@+id/fragment_repo_list"
+        android:id="@+id/repoListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
