--- a/presentation/src/main/res/layout/view_repo_list_item.xml
+++ b/presentation/src/main/res/layout/view_repo_list_item.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/view_repo_list_item_layout"
+        android:id="@+id/repoListItemLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/view_repo_list_item_stars"
+                android:id="@+id/repoListItemStars"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_normal"
@@ -30,12 +30,12 @@
                 tools:text="150" />
 
             <TextView
-                android:id="@+id/view_repo_list_item_name"
+                android:id="@+id/repoListItemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/view_repo_list_item_stars"
+                android:layout_toStartOf="@+id/repoListItemStars"
                 android:maxLines="2"
                 android:ellipsize="end"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -45,7 +45,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/view_repo_list_item_descr"
+            android:id="@+id/repoListItemDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
