Refactored to flow

--- a/presentation/src/main/res/layout/fragment_repo_list.xml
+++ b/presentation/src/main/res/layout/fragment_repo_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.dreddi.android.githublist.presentation.views.RepoListRecyclerView
         android:id="@+id/repoListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
